# logicahome

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml
docs/: architecture.md  cookbook.md  demo.md  hardware-testing.md  index.md  release-process.md  writing-adapters.md
examples/: claude_desktop_config.json  config.yaml
packaging/: logicahome.service
src/logicahome/: __init__.py  __main__.py  cli.py  i18n.py  runtime.py  server.py  server_http.py  wizards.py
src/logicahome/adapters/: __init__.py  base.py  esphome.py  home_assistant.py  hue.py  matter.py  shelly.py  tuya.py
src/logicahome/core/: __init__.py  adapter.py  config.py  device.py  errors.py  logging.py  registry.py  scene.py
src/logicahome/web/: __init__.py  api.py  app.py  views.py
src/logicahome/web/templates/: base.html  connect.html  devices.html  index.html  scan.html  scenes.html  settings.html
tests/: test_scenes.py  test_smoke.py  test_tuya_helpers.py
